# Netflix20

./: CMakeLists.txt  Characteristics.h  Collection.cpp  Collection.h  ConjunctionFilter.cpp  ConjunctionFilter.h  DisjunctionFilter.cpp  DisjunctionFilter.h  Filter.cpp  Filter.h  LICENSE  MediaCollection.cpp  MediaCollection.h  VideoContent.cpp  VideoContent.h  main.cpp  notUseFilters.cpp  notUseFilters.h
resources/: movie_titles.txt  my.json
